--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,30 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Khaopiyoji</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
+	<url>https://github.com/Vikrant25122004/Khaopiyoji</url>
 	<licenses>
 		<license/>
 	</licenses>
+
 	<developers>
-		<developer/>
+		<developer>
+			<id>Vikrant25122004</id>
+			<name>Vikrant Sharma</name>
+			<email>v3815159@gmail.com</email>
+			<url>https://github.com/Vikrant25122004</url>
+			<organization>Your Organization (if applicable)</organization>
+			<organizationUrl>Your Organization URL (if applicable)</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+			<timezone>Your Timezone (e.g., +05:30)</timezone>
+		</developer>
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection>scm:git:https://github.com/Vikrant25122004/Khaopiyoji.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/Vikrant25122004/Khaopiyoji.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/Vikrant25122004/Khaopiyoji</url>
 	</scm>
 	<properties>
 		<java.version>17</java.version>
@@ -33,7 +45,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.33</version> <!-- Use the latest version -->
+			 <version>8.0.33</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -72,10 +84,22 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 
 		</dependency>
+
 		<dependency>
-			<groupId>com.razorpay</groupId>
-			<artifactId>razorpay-java</artifactId>
-			<version>1.4.7</version>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.12.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.5</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
