--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
   # Server Multipart Configuration for File Uploads
-spring.server.multipart.enabled=true
-spring.server.multipart.max-file-size=5MB
-spring.server.multipart.max-request-size=20MB
+# Correct way to set multipart configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 spring.aop.proxy-target-class=true
