adding customer signup page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
   # Server Multipart Configuration for File Uploads
 # Correct way to set multipart configuration
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.server.multipart.enabled=true
+spring.server.multipart.max-file-size=10MB
+spring.server.multipart.max-request-size=10MB
 
 spring.aop.proxy-target-class=true
