--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 # Spring DataSource Configuration for MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/Khaopiyoji?createDatabaseIfNotExist=true
-
-
 spring.datasource.username=root
 spring.datasource.password=Gautam@23
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,8 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
   # Server Multipart Configuration for File Uploads
 # Correct way to set multipart configuration
-spring.server.multipart.enabled=true
-spring.server.multipart.max-file-size=10MB
-spring.server.multipart.max-request-size=10MB
-
-spring.aop.proxy-target-class=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
