--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,18 +1,18 @@
 # Spring DataSource Configuration for MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/Khaopiyoji?createDatabaseIfNotExist=true
+spring.datasource.url=mysql://root:aGzQjcDZDFIgQRUrWREjKvRcizcYDCUU@mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Gautam@23
+spring.datasource.password=aGzQjcDZDFIgQRUrWREjKvRcizcYDCUU
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-  # JPA (Hibernate) Configuration
+# JPA (Hibernate) Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-  # Redis Configuration
+# Redis Configuration
 spring.redis.uri=redis://default:VLR4xLH3BRbRRRNYjVHPjjsfPFNc1VIo@redis-15154.crce179.ap-south-1-1.ec2.redns.redis-cloud.com:15154
 
-  # Email Configuration
+# Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vikrantsharma232529@gmail.com
@@ -20,7 +20,7 @@ spring.mail.password=xacm zgmc offt cnie
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-  # Server Multipart Configuration for File Uploads
+# Server Multipart Configuration for File Uploads
 # Correct way to set multipart configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
@@ -36,4 +36,3 @@ spring.kafka.properties.session.timeout.ms=45000
 
 client.id=ccloud-springboot-client-19d24e66-e627-49a6-8771-edaf1c13799f
 
-spring.profiles.active=${ENV:dev}
