--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring DataSource Configuration for MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/Khaopiyoji?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Gautam@23
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
   # JPA (Hibernate) Configuration
@@ -10,13 +10,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
   # Redis Configuration
-spring.redis.uri=redis://default:VLR4xLH3BRbRRRNYjVHPjjsfPFNc1VIo@redis-15154.crce179.ap-south-1-1.ec2.redns.redis-cloud.com:15154
+spring.redis.uri=redis://default:${REDIS_PASSWORD}@redis-15154.crce179.ap-south-1-1.ec2.redns.redis-cloud.com:15154
 
   # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vikrantsharma232529@gmail.com
-spring.mail.password=xacm zgmc offt cnie
+spring.mail.username=${EMAIL}
+spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -36,4 +36,3 @@ spring.kafka.properties.session.timeout.ms=45000
 
 client.id=ccloud-springboot-client-19d24e66-e627-49a6-8771-edaf1c13799f
 
-spring.profiles.active=${ENV:dev}
